[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorque"
version = "0.1.0"
description = "Python client library for Quali Torque SaaS API"
authors = [ { name="Your Name", email="you@example.com" } ]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["quali", "torque", "environment", "automation", "infrastructure"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7",
    "typing-extensions>=4.5.0",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "coverage[toml]>=7.5",
    "black>=24.3.0",
    "isort>=5.13.2",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/your-org/pytorque"
Documentation = "https://github.com/your-org/pytorque#readme"
Issues = "https://github.com/your-org/pytorque/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["src"]

[tool.coverage.run]
source = ["pytorque"]
branch = true
