[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorque"
version = "0.1.1.2"
description = "Python client library for Quali Torque SaaS API"
authors = [ { name="Your Name", email="you@example.com" } ]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["quali", "torque", "environment", "automation", "infrastructure"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    # Pinned to ensure reproducible installs; keep in sync with requirements.txt
    "httpx==0.28.1",
    "pydantic==2.11.7",
    "typing-extensions==4.12.2",
    "PyYAML==6.0.1",
]

[project.optional-dependencies]
dev = [
    # Pinned dev tooling (adjust as needed)
    "pytest==8.1.1",
    "coverage[toml]==7.4.4",
    "black==24.3.0",
    "isort==5.13.2",
    "mypy==1.8.0",
]

[project.urls]
Homepage = "https://github.com/QualiSystemsLab/pytorque"
Documentation = "https://github.com/QualiSystemsLab/pytorque#readme"
Issues = "https://github.com/QualiSystemsLab/pytorque/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["src"]

[tool.coverage.run]
source = ["pytorque"]
branch = true
